--- a/01-roulette-simulation.Rmd
+++ b/01-roulette-simulation.Rmd
@@ -13,18 +13,17 @@ output:
 ```{r global options, include = FALSE}
 knitr::opts_chunk$set(echo=TRUE, warning=FALSE, message=FALSE)
 library(magrittr)
+library(ggplot2)
 ```
-This is one example of how to write a blog post for Data Science 5620 Course. You do not have to use this template but you will have to rigorously answer every question mentioned in the assignment. 
+ 
 # Introduction
   I will be running simulations to answer multiple questions regarding the efficiency of the "Martingale" strategy when playing Roulette. I will calculate the average earnings that a gambler can expect, along with the probability of walking out with a profit when using this strategy. I will also examine how a gamblers earnings will evolve over a series of plays. 
 
   Other factors I will study are the affects of the average earnings by changing an input parameter and how the stopping rules impact the number of plays a gambler completes.
 ## Background
-You must give all background information needed for a "stranger" to be able to understand this deliverable. Assume this "stranger" is not a statistician or a data scientist.
-
 Roulette is a popular game found at casinos and many other places. It is a round table of 38 evenly-sized pockets on a wheel, composed of 18 black, 18 red, and 2 green pockets. Each pocket is also numbered. To win in Roulette, a gambler must pick a pocket (by color, number, odd/even, etc.) where the marble comes to rest. For this simulation we are picking by color (red) in which the payout is \$1 for each \$1 wagered. An example would be a gambler bets \$5 on red and if the marble lands on red, then the gambler would receive the \$5 bet back, along with an addition \$5 in winnings for a total of \$10. If the marble landed on black, then the gambler would lose the \$5 bet.
 
-  We will be using the "Martingale" strategy to play Roulette in this simulation. The flowchart below provides the process to follow the Martingale strategy.
+  I will be using the "Martingale" strategy to play Roulette in this simulation. The flowchart below provides the process to follow the Martingale strategy.
 ![Martingale flowchart](/Users/TyPainter1/Documents/Masters/Fall\ 2020/DS-5620/martingale-flowchart.png){#id .class width=50% height=50%}
 # Methods
 Here will be the majority of your code (simulations, functions, game theory, etc.). Be sure to comment your code so that Tom and the TA's can read through it easily. 
@@ -44,21 +43,22 @@ Here will be the majority of your code (simulations, functions, game theory, etc
 one_play <- function(state){
   
     # Wager
-    proposed_wager <- ifelse(state$previous_win, 1, 2*state$previous_wager)
-    wager <- min(proposed_wager, state$M, state$B)
+    proposed_wager <- ifelse(state$previous_win, 1, 2*state$previous_wager) 
+    wager <- min(proposed_wager, state$M, state$B)  
     
     # Spin of the wheel
+    # Returns 1 for TRUE, 0 for FALSE
     red <- rbinom(1,1,18/38)
     
     # Update state
     state$plays <- state$plays + 1
     state$previous_wager <- wager
     if(red){
-      # WIN
+      # WIN is if red = 1 (true)
       state$B <- state$B + wager
       state$previous_win <- TRUE
     }else{
-      # LOSE
+      # LOSE is if red = 0 (false)
       state$B <- state$B - wager
       state$previous_win <- FALSE
     }
@@ -72,7 +72,7 @@ one_play <- function(state){
 #' @param state A list.  See one_play
 #' @return TRUE/FALSE
 stop_play <- function(state){
-  if(state$B <= 0) return(TRUE)
+  if(state$B <= 0) return(TRUE) 
   if(state$plays >= state$L) return(TRUE)
   if(state$B >= state$W) return(TRUE)
   FALSE
@@ -124,7 +124,7 @@ get_last <- function(x) x[length(x)]
 
 
 # Simulation
-walk_out_money <- rep(NA, 10000)
+walk_out_money <- rep(NA, 10)
 for(j in seq_along(walk_out_money)){
   walk_out_money[j] <- one_series(B = 200, W = 300, L = 1000, M = 100) %>% get_last
 }
@@ -138,23 +138,23 @@ mean(walk_out_money > 200)
 # Estimated earnings
 mean(walk_out_money - 200)
 ```
-Explain all of your output for example here we would have a sentence explaining the histogram.
+
+In the histogram above, you can see the distribution of the two possible outcomes of either walking out bankrupt with \$0 or walking out with the maximum winnings threshold of \$300. In this case, there are slightly more instances where the gambler walking out with the maximum profit compared to walking out bankrupt.
+
+The probability of walking out with a profit and the estimated earnings calculations can be a bit deceiving. While the probability of walking out with the maximum profit is over 50% (51.37%), the average earning is actually negative implying the the gambler will walk away on average losing \$45.89. I believe this is due to difference in the maximum earnings threshold (+\$100) and maximum loss threshold (-\$200). 
+  By setting the profit limit lower you can decrease the number of plays the gambler can attempt, thus increasing the chances of profiting. This is because the odds are in the houses favor and with each additional play the gambler incrementally decreases their chances of winning. 
+  Also, the average earnings are skewed because of the profit/loss limits. Every time the gambler goes bankrupt, the loss is \$200, but every time the gambler hits the maximum winnings, the profit is only \$100. So even though in this simulation the gambler won more times than not, the losses are worth more when calculating the average.   
+
 # Results
 ```{r}
+# Chart of how a gamblers earnings evolve over a series of plays 
+plot(state$plays, walk_out_money)
 
+# Estimated # of plays before stopping
+mean(state$plays)
 ```
 Sentence explaining summary statistics. 
-## Hints
-This is how you report inline stats like the mean: `r mean(success.vec)`. 
-You may include latex if needed: $P(A\cup B)=P(A)+ P(B) - P(A\cap B)$
-Here is an example inline Table:
-| One | Two | Three | Four |
-|:---:|:---:|:-----:|:----:|
-|  1  |   1 |  a    |  -1  |
-|  2  |   2 |  b    |   -3 |
-|  3  |   4 |  c    |   +1 |
-This is how you include an image:
-![Caption: Image of Dog.](/Users/meganhollister/Library/Mobile Documents/com~apple~CloudDocs/Documents/Vanderbilt/Fall 2020/TA DS Prob/TA-Resources-DS-5620/Blog Template/dog.png){#id .class width=50% height=50%}
+
 # Conclusions
 Clearly outline the conclusions you have made from the methods (simulations, functions, game theory, etc.). You must answer EVERY question mentioned in the assignment. Again this is an example of how to write a blog post and you may not always need all of the sections (Introduction, Background, Methods, Results, Conclusions). 
 Be prepared to share your blog post with the class when the deliverable is due. The deliverable should be your own work. You may discuss concepts with classmates, but you may not share code or text.
