--- a/01-roulette-simulation/Roulette.Rmd
+++ b/01-roulette-simulation/Roulette.Rmd
@@ -13,7 +13,6 @@ output:
 ```{r global options, include = FALSE}
 knitr::opts_chunk$set(echo=TRUE, warning=FALSE, message=FALSE)
 library(magrittr)
-library(ggplot2)
 ```
  
 # Introduction
@@ -26,7 +25,6 @@ Roulette is a popular game found at casinos and many other places. It is a round
 I will be using the "Martingale" strategy to play Roulette in this simulation. The flowchart below provides the process to follow the Martingale strategy.
 ![Martingale flowchart](/Users/TyPainter1/Documents/Masters/Fall\ 2020/DS-5620/martingale-flowchart.png){#id .class width=50% height=50%}
 # Methods
-Here will be the majority of your code (simulations, functions, game theory, etc.). Be sure to comment your code so that Tom and the TA's can read through it easily. 
 ```{r}
 #' A single play of the Martingale strategy
 #'
@@ -139,11 +137,11 @@ mean(walk_out_money > 200)
 mean(walk_out_money - 200)
 ```
 
-In the histogram above, you can see the distribution of the two possible outcomes of either walking out bankrupt with \$0 or walking out with the maximum winnings threshold of \$300. In this case, there are slightly more instances where the gambler is walking out with the maximum profit (5,166) compared to walking out bankrupt (4,834) producing a winning probability of 51.66%. To calculate the average earnings, I found the amount of money the gambler walked away with after each simulation and subtracted the starting budget of \$200 to find the profit/loss margin. I used each of 10,000 profits/losses from each simulation to find the total average loss of -\$44.96.
+In the histogram above, you can see the distribution of the two possible outcomes of either walking out bankrupt with \$0 or walking out with the maximum winnings threshold of \$300. In this case, there are slightly more instances where the gambler is walking out with the maximum profit (5,182) compared to walking out bankrupt (4,818) producing a winning probability of 51.82%. To calculate the average earnings, I found the amount of money the gambler walked away with after each simulation and subtracted the starting budget of \$200 to find the profit/loss margin. I used each of 10,000 profits/losses from each simulation to find the total average loss of -\$44.55.
 
 The probability of walking out with a profit and the estimated earnings calculations can be a bit deceiving. While the probability of walking out with the maximum profit is over 50%, the average earning is actually negative implying the the gambler will walk away on average losing money. I believe this is due to difference in the maximum winnings threshold (+\$100) and maximum loss threshold (-\$200). 
   The average earnings are skewed because of the profit/loss limits. Every time the gambler goes bankrupt, the loss is \$200, but every time the gambler hits the maximum winnings, the profit is only \$100. So even though in this simulation the gambler won more times than not, the losses are worth more when calculating the average.
-  Also, by setting the profit limit lower you can decrease the number of plays the gambler can attempt, thus increasing the chances of profiting. This is because the odds are in the houses favor and with each additional play the gambler incrementally decreases their chances of winning. If you were to increase the maximum winnings threshold by another \$100 to a total of \$400 to make the profit/loss limits equal, you would see a dramatic decrease in the probability of winning. In the histogram below, the probability of walking out a winner decreased from 51.66% to 31.27%.
+  Also, by setting the profit limit lower you can decrease the number of plays the gambler can attempt, thus increasing the chances of profiting. This is because the odds are in the houses favor and with each additional play the gambler incrementally decreases their chances of winning. If you were to increase the maximum winnings threshold by another \$100 to a total of \$400 to make the profit/loss limits equal, you would see a dramatic decrease in the probability of winning. In the histogram below, the probability of walking out a winner decreased from 51.82% to 31.51%.
 ```{r}
 # Simulation with winning threshold increased to $400
 walk_out_money <- rep(NA, 10000)
@@ -166,7 +164,7 @@ mean(walk_out_money - 200)
 one_play <- function(state){
   
     # Wager
-    proposed_wager <- ifelse(state$previous_win, 25, 2*state$previous_wager) 
+    proposed_wager <- ifelse(state$previous_win, 50, 2*state$previous_wager) 
     wager <- min(proposed_wager, state$M, state$B)  
     
     # Spin of the wheel
@@ -203,10 +201,33 @@ mean(walk_out_money > 200)
 # Estimated earnings
 mean(walk_out_money - 200)
 ```
-
-  
-  Since the number of plays and probability of winning/estimated earnings are inversely related, decreasing the number of plays threshold for stopping from 1,000 plays to 100 plays significantly increases both the probability of winning (---) and estimated earnings (-----) in the histogram and calculations below. 
+  Since the number of plays and probability of winning/estimated earnings are inversely related, decreasing the number of plays threshold for stopping from 1,000 plays to 100 plays significantly increases both the probability of winning (69.16%) and estimated loss (\$20.89) in the histogram and calculations below. 
 ```{r}
+# A single play of the Martingale strategy
+one_play <- function(state){
+  
+    # Wager
+    proposed_wager <- ifelse(state$previous_win, 1, 2*state$previous_wager) 
+    wager <- min(proposed_wager, state$M, state$B)  
+    
+    # Spin of the wheel
+    # Returns 1 for TRUE, 0 for FALSE
+    red <- rbinom(1,1,18/38)
+    
+    # Update state
+    state$plays <- state$plays + 1
+    state$previous_wager <- wager
+    if(red){
+      # WIN is if red = 1 (true)
+      state$B <- state$B + wager
+      state$previous_win <- TRUE
+    }else{
+      # LOSE is if red = 0 (false)
+      state$B <- state$B - wager
+      state$previous_win <- FALSE
+    }
+  state
+}
 # Simulation for decreasing the plays limit to 100
 walk_out_money <- rep(NA, 10000)
 for(j in seq_along(walk_out_money)){
@@ -267,26 +288,107 @@ one_series_plays <- function(
 # Simulation for number of plays per series in 10,000 simulations 
 plays_per_series <- rep(NA, 10000)
 for(j in seq_along(plays_per_series)){
-  plays_per_series[j] <- one_series_plays(B = 200, W = 400, L = 1000, M = 100) %>% get_last
+  plays_per_series[j] <- one_series_plays(B = 200, W = 300, L = 1000, M = 100) %>% get_last
 }
 
 # Estimated number of plays before stopping
 mean(plays_per_series)
 ```
-I calculated an average of 339 plays through 10,000 simulations that a gambler will attempt before hitting one of the following stopping conditions:
+I calculated an average of 202 plays through 10,000 simulations that a gambler will attempt before hitting one of the following stopping conditions:
   - Player has W (\$300) dollars
   - Player goes bankrupt (\$0)
   - Player completes L (1,000) wagers (or plays)
 I did this by creating a one_series_plays function to simulate a series of plays until reaching a stopping condition. I then passed the results of the one_series_plays function into another function (plays_per_series) to simulate 10,000 series. 
 
 ```{r}
-# use code from slack to make line chart
+# Code to simulate a sinle spin of the Roulette wheel
+single_spin <- function(){
+  possible_outcomes <- c(rep("red",18), rep("black",18), rep("green",2))
+  sample(possible_outcomes, 1)
+}
+# Update wager
+martingale_wager <- function(
+  previous_wager
+  , previous_outcome
+  , max_wager
+  , current_budget
+){
+  if(previous_outcome == "red") return(1)
+  min(2*previous_wager, max_wager, current_budget)
+}
+# Create ledger using budget and wager
+one_play <- function(previous_ledger_entry, max_wager){
+  # Create a copy of the input object that will become the output object
+  out <- previous_ledger_entry
+  out[1, "game_index"] <- previous_ledger_entry[1, "game_index"] + 1
+  out[1, "starting_budget"] <- previous_ledger_entry[1, "ending_budget"]
+  out[1, "wager"] <- martingale_wager(
+    previous_wager = previous_ledger_entry[1, "wager"]
+    , previous_outcome = previous_ledger_entry[1, "outcome"]
+    , max_wager = max_wager
+    , current_budget = out[1, "starting_budget"]
+  )
+  out[1, "outcome"] <- single_spin()
+  out[1, "ending_budget"] <- out[1, "starting_budget"] + 
+    ifelse(out[1, "outcome"] == "red", +1, -1)*out[1, "wager"]
+  return(out)
+}
+one_series <- function(
+  max_games, starting_budget, winning_threshold, max_wager
+){
+  # Initialize ledger
+  ledger <- data.frame(
+      game_index = 0:max_games
+    , starting_budget = NA_integer_
+    , wager = NA_integer_
+    , outcome = NA_character_
+    , ending_budget = NA_integer_
+  )
+  ledger[1, "wager"] <- 1
+  ledger[1, "outcome"] <- "red"
+  ledger[1, "ending_budget"] <- starting_budget
+  for(i in 2:nrow(ledger)){
+    #browser()
+    ledger[i,] <- one_play(ledger[i-1,], max_wager)
+    if(stopping_rule(ledger[i,], winning_threshold)) break
+  }
+  # Return non-empty portion of ledger
+  ledger[2:i, ]
+}
+# Stopping conditions
+stopping_rule <- function(
+  ledger_entry
+  , winning_threshold
+){
+  ending_budget <- ledger_entry[1, "ending_budget"]
+  if(ending_budget <= 0) return(TRUE)
+  if(ending_budget >= winning_threshold) return(TRUE)
+  FALSE
+}
+# Profit function subtracting ending budget from beginning budget
+profit <- function(ledger){
+  n <- nrow(ledger)
+  profit <- ledger[n, "ending_budget"] - ledger[1, "starting_budget"]
+  return(profit)
+}
+# Chart showing how gamblers earnings evolve over a series of plays
+require(magrittr)
+svg(filename = "loser.svg", width=16, height =9)
+par(cex.axis=2, cex.lab = 2, mar = c(8,8,2,2), bg = rgb(222, 235, 247, max = 255))
+set.seed(1)
+ledger <- one_series(200,200,300,500)
+plot(ledger[,c(1,5)], type = "l", lwd = 5, xlab = "Game Index", ylab = "Budget")
+dev.off()
+svg(filename = "winner.svg", width=16, height =9)
+par(cex.axis=2, cex.lab = 2, mar = c(8,8,2,2), bg = rgb(222, 235, 247, max = 255))
+set.seed(2)
+l2 <- one_series(200,200,300,500)
+plot(l2[,c(1,5)], type = "l", lwd = 5, xlab = "Game Index", ylab = "Budget")
+dev.off()
 ```
-
-Sentence explaining summary statistics. 
-
+  In the graph above you can see how a gambler's budget slowly, but surely declines over a number (~70-75) plays.
 # Conclusions
-Clearly outline the conclusions you have made from the methods (simulations, functions, game theory, etc.). You must answer EVERY question mentioned in the assignment. Again this is an example of how to write a blog post and you may not always need all of the sections (Introduction, Background, Methods, Results, Conclusions). 
-Be prepared to share your blog post with the class when the deliverable is due. The deliverable should be your own work. You may discuss concepts with classmates, but you may not share code or text.
+There is one main conclusions I came to after running multiple simulations. As a gambler, in order to have the best chance at being profitable, you want wager larger amounts and play as few times as possible.
+
 
 
