--- a/01-roulette-simulation/Roulette.Rmd
+++ b/01-roulette-simulation/Roulette.Rmd
@@ -1,14 +1,17 @@
 ---
 title: "Roulette"
-author: " Ty Painter"
+author: ' Ty Painter'
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: 
-  html_document: 
+output:
+  html_document:
     code_folding: hide
     toc: yes
-    number_sections: true
+    number_sections: yes
     toc_depth: 3
-    toc_float: true
+    toc_float: yes
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
 ---
 ```{r global options, include = FALSE}
 knitr::opts_chunk$set(echo=TRUE, warning=FALSE, message=FALSE)
