--- a/01-roulette-simulation/Roulette.Rmd
+++ b/01-roulette-simulation/Roulette.Rmd
@@ -16,18 +16,24 @@ output:
 ```{r global options, include = FALSE}
 knitr::opts_chunk$set(echo=TRUE, warning=FALSE, message=FALSE)
 library(magrittr)
+set.seed(09062020)
 ```
  
 # Introduction
+
 I will be running simulations to answer multiple questions regarding the efficiency of the "Martingale" strategy when playing Roulette. I will calculate the average earnings that a gambler can expect, along with the probability of walking out with a profit when using this strategy. I will also examine how a gambler's earnings will evolve over a series of plays. 
 
 Other factors I will study are the affects of the average earnings by changing an input parameter and how the stopping rules impact the number of plays a gambler completes.
+
 ## Background
+
 Roulette is a popular game found at casinos and many other places. It is a round table of 38 evenly-sized pockets on a wheel, composed of 18 black, 18 red, and 2 green pockets. Each pocket is also numbered. To win in Roulette, a gambler must pick a pocket (by color, number, odd/even, etc.) where the marble comes to rest. For this simulation we are picking by color (red) in which the payout is \$1 for each \$1 wagered. An example would be a gambler bets \$5 on red and if the marble lands on red, then the gambler would receive the \$5 bet back, along with an addition \$5 in winnings for a total of \$10. If the marble landed on black, then the gambler would lose the \$5 bet.
 
 I will be using the "Martingale" strategy to play Roulette in this simulation. The flowchart below provides the process to follow the Martingale strategy.
 ![Martingale flowchart](/Users/TyPainter1/Documents/Masters/Fall\ 2020/DS-5620/martingale-flowchart.png){#id .class width=50% height=50%}
+
 # Methods
+
 ```{r}
 #' A single play of the Martingale strategy
 #'
@@ -140,11 +146,11 @@ mean(walk_out_money > 200)
 mean(walk_out_money - 200)
 ```
 
-In the histogram above, you can see the distribution of the two possible outcomes of either walking out bankrupt with \$0 or walking out with the maximum winnings threshold of \$300. In this case, there are slightly more instances where the gambler is walking out with the maximum profit (5,182) compared to walking out bankrupt (4,818) producing a winning probability of 51.82%. To calculate the average earnings, I found the amount of money the gambler walked away with after each simulation and subtracted the starting budget of \$200 to find the profit/loss margin. I used each of 10,000 profits/losses from each simulation to find the total average loss of -\$44.55.
+In the histogram above, you can see the distribution of the two possible outcomes of either walking out bankrupt with \$0 or walking out with the maximum winnings threshold of \$300. In this case, there are slightly more instances where the gambler is walking out with the maximum profit (5,096) compared to walking out bankrupt (4,904) producing a winning probability of 50.96%. To calculate the average earnings, I found the amount of money the gambler walked away with after each simulation and subtracted the starting budget of \$200 to find the profit/loss margin. I used each of 10,000 profits/losses from each simulation to find the total average loss of -\$47.12.
 
 The probability of walking out with a profit and the estimated earnings calculations can be a bit deceiving. While the probability of walking out with the maximum profit is over 50%, the average earning is actually negative implying the the gambler will walk away on average losing money. I believe this is due to difference in the maximum winnings threshold (+\$100) and maximum loss threshold (-\$200). 
   The average earnings are skewed because of the profit/loss limits. Every time the gambler goes bankrupt, the loss is \$200, but every time the gambler hits the maximum winnings, the profit is only \$100. So even though in this simulation the gambler won more times than not, the losses are worth more when calculating the average.
-  Also, by setting the profit limit lower you can decrease the number of plays the gambler can attempt, thus increasing the chances of profiting. This is because the odds are in the houses favor and with each additional play the gambler incrementally decreases their chances of winning. If you were to increase the maximum winnings threshold by another \$100 to a total of \$400 to make the profit/loss limits equal, you would see a dramatic decrease in the probability of winning. In the histogram below, the probability of walking out a winner decreased from 51.82% to 31.51%.
+  Also, by setting the profit limit lower you can decrease the number of plays the gambler can attempt, thus increasing the chances of profiting. This is because the odds are in the houses favor and with each additional play the gambler incrementally decreases their chances of winning. If you were to increase the maximum winnings threshold by another \$100 to a total of \$400 to make the profit/loss limits equal, you would see a dramatic decrease in the probability of winning. In the histogram below, the probability of walking out a winner decreased from 50.96% to 30.49%.
 ```{r}
 # Simulation with winning threshold increased to $400
 walk_out_money <- rep(NA, 10000)
@@ -204,7 +210,7 @@ mean(walk_out_money > 200)
 # Estimated earnings
 mean(walk_out_money - 200)
 ```
-  Since the number of plays and probability of winning/estimated earnings are inversely related, decreasing the number of plays threshold for stopping from 1,000 plays to 100 plays significantly increases both the probability of winning (69.16%) and estimated loss (\$20.89) in the histogram and calculations below. 
+  Since the number of plays and probability of winning/estimated earnings are inversely related, decreasing the number of plays threshold for stopping from 1,000 plays to 100 plays significantly increases the probability of winning (68.67%) and decreases the estimated loss (\$21.08) in the histogram and calculations below. 
 ```{r}
 # A single play of the Martingale strategy
 one_play <- function(state){
@@ -248,6 +254,7 @@ mean(walk_out_money - 200)
 ```
 
 # Results
+
 ```{r}
 #' Count number of plays to either bankruptcy, success, or play limits
 #'
@@ -297,7 +304,7 @@ for(j in seq_along(plays_per_series)){
 # Estimated number of plays before stopping
 mean(plays_per_series)
 ```
-I calculated an average of 202 plays through 10,000 simulations that a gambler will attempt before hitting one of the following stopping conditions:
+I calculated an average of 203 plays through 10,000 simulations that a gambler will attempt before hitting one of the following stopping conditions:
   - Player has W (\$300) dollars
   - Player goes bankrupt (\$0)
   - Player completes L (1,000) wagers (or plays)
@@ -390,8 +397,12 @@ plot(l2[,c(1,5)], type = "l", lwd = 5, xlab = "Game Index", ylab = "Budget")
 dev.off()
 ```
   In the graph above you can see how a gambler's budget slowly, but surely declines over a number (~70-75) plays.
+  
 # Conclusions
+
 There is one main conclusions I came to after running multiple simulations. As a gambler, in order to have the best chance at being profitable, you want wager larger amounts and play as few times as possible.
+
+However, there are certain limitations of the Martingale betting strategy. One that comes to mind is the maximum wager on a single play. If a gambler goes on an extended losing streak, which is bound to happen, then the gambler could reach the maximum wager. If the gambler loses the roll of the maximum wager, then the gambler will not be able to double the wager on the next roll. This will cause the gambler to not profit the \$1 like on the other wins. Also, this extended losing streak could be costly to a gambler whose budget is not large, as doubling your bets for each loss can be expensive. 
 
 
 
