--- a/06-order-statistics/order-statistics.Rmd
+++ b/06-order-statistics/order-statistics.Rmd
@@ -308,7 +308,8 @@ ggplot(df10p, aes(x = x, y = porder)) +
   geom_line() +
   theme_classic() +
   labs(title = "CDF of Order Statistics of Standard Normal Distribution
-(Sample Minimum)")
+(Sample Minimum)") +
+  xlim(c(-1.5,1.5))
 ```
 
 The probability of the sample minimum will be exactly 1 in a normal distribution.
@@ -319,7 +320,8 @@ ggplot(df10d, aes(x = x, y = dorder)) +
   geom_line() +
   theme_classic() +
   labs(title = "PDF of Order Statistics of Standard Normal Distribution
-(Sample Minimum)")
+(Sample Minimum)") +
+  xlim(c(-1.5,1.5))
 ```
 
 The density of the sample minimum will be push up and approach -1 since the x value sequence minimum is -1 in this normal distribution.
